--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -6,5 +6,22 @@
 </head>
 <body>
 	<h1 th:text="'List Of Owners'">Owner's List</h1>
+
+	<table>
+		<thead>
+			<tr>
+				<td>ID</td>
+				<td>First Name</td>
+				<td>Last Name</td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="owner : ${owners}">
+				<td th:text="${owner?.id}">1</td>
+				<td th:text="${owner?.firstName}">Ojas</td>
+				<td th:text="${owner?.lastName}">Salokhe</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 </html>
