--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
 <meta charset="ISO-8859-1">
 <title>List of Pet Owners</title>
 </head>
 <body>
-	<h1 th:text="'List Of Owners'">Owner's List</h1>
+	<h2>Owners</h2>
 
-	<table>
+	<table id="owners" class="table table-striped">
 		<thead>
 			<tr>
-				<td>ID</td>
-				<td>First Name</td>
-				<td>Last Name</td>
+				<td style="width: 150px;">ID</td>
+				<td style="width: 150px;">First Name</td>
+				<td style="width: 150px;">Last Name</td>
 			</tr>
 		</thead>
 		<tbody>
